[package]
name = "ds_proxy"
version = "0.1.0"
authors = ["simon lehericey <mail@simon.lehericey.net>"]
edition = "2018"
build = "build.rs" # Cargo only supports one build script per project at the moment
rust-version = "1.65"

[dependencies]
sodiumoxide = "*"
futures = "*"
futures-core = "*"
actix-web = { version="*", features = ["openssl"] }
awc = "*"
actix-http = "*"
actix-files = "*"
bytes = "*"
docopt = "*"
serde = { version = "*", features = ["derive"] }
log = "*"
env_logger = "*"
sentry = "*"
sentry-actix = "*"
url = "*"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
actix-rt = "*"
proptest = "*"
rand = "*"
serial_test = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
