[package]
name = "ds_proxy"
version = "0.1.0"
authors = ["simon lehericey <mail@simon.lehericey.net>"]
edition = "2018"
build = "build.rs" # Cargo only supports one build script per project at the moment
rust-version = "1.69.0"

[dependencies]
sodiumoxide = "*"
futures = "*"
futures-core = "*"
actix-web = { version="*", features = ["openssl"] }
awc = { version = "*", features = ["openssl"] }
actix-http = "*"
actix-files = "*"
bytes = "*"
docopt = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
log = "*"
env_logger = "*"
sentry = "*"
sentry-actix = "*"
url = "*"
base64 = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
chrono = "0.4.23"
hex = "0.4.3"
ring = "0.16.20"
http = "0.2.8"
sha256 = "1.1.1"
data-encoding = "2.3.3"
openssl = "*"
md-5 = "*"
sha2 = "*"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
actix-rt = "*"
proptest = "*"
rand = "*"
serial_test = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
